@@ -23,17 +23,19 @@ keep_output_files = True
 # number of precision digits used in scoring
 precision = 0
 
-# additional column for showing number of best scores achieved
-show_bests = True
-
-# additional column for showing number of best uniques scores achieved
-show_uniques = True
-
-# additional column for showing gain (how much score the solution contributes towards maximums)
-show_gain = True
-
-# automatically hides column for number of fails if there are no failed test cases
-autohide_fails = False
+# show: defines the order of columns in the leaderboard
+# leaderboard_score is the default one used for score
+# leaderboard_custom is used when supplied with --var 
+# OVERALL = overall score
+# GROUPS = all columns related to --groups
+# BESTS = number of times the result achieved the best result
+# UNIQUES = number of unique (not achieved by any other result) bests
+# GAIN = contribution towards the relative bests (sum for each unique best result - second best result)
+# FAILS = number of fails 
+# MISSING = number of missing values
+# you can add ? after the name (for example FAILS?) so that column will be added only if it has any non-zero values 
+leaderboard_score = OVERALL,GROUPS,BESTS,UNIQUES,GAIN,FAILS?,MISSING?
+leaderboard_custom = OVERALL,GROUPS,FAILS?,MISSING?
 
 # commands used to run / generate tests, check github project page for more information
 cmd_tester = a.exe < in/%SEED04%.txt > %OUTPUT_DIR%/%SEED%.out 2> %OUTPUT_DIR%/%SEED%.err && vis.exe in/%SEED04%.txt %OUTPUT_DIR%/%SEED%.out > %OUTPUT_DIR%/%SEED%.res 
