@@ -1,5 +1,6 @@
 [WIP]
-* run: --debug mode 
+* run: --debug mode added
+* show: new general/leaderboard replaces general/show_XXX options and allows for custom leaderboard order
 [0.5.0]
 * complete overhaul of cmd line help
 	* --help will only show the explanation for arguments relevant to your mode (e.g. run, show, find)
